fix: override GridItem overflow
GridItem was recently updated to hide overflow - this breaks the tooltip behaviour on when hovering on a minified metric. This fix updates wnd-GridItem to revert to original overflow behaviour.

--- a/nerdlets/shared/scss/layout-base.scss
+++ b/nerdlets/shared/scss/layout-base.scss
@@ -87,6 +87,10 @@ h4 {
   }
 }
 
+[class*="wnd-GridItem"] {
+  overflow: visible;
+}
+
 .redLight {
   color: #bf0016;
 }
